# Artificial_Intelligence

./: pyproject.toml
deeplearning-ai/: README.md
deeplearning-ai/00_database-agent/: L1_Your_First_AI_Agent.ipynb  L2_Interacting_with_a_CSV_Data.ipynb  L3_Connecting_to_a_SQL_Database.ipynb  L4_Azure_OpenAI_Function_Calling_Feature.ipynb
deeplearning-ai/00_database-agent/data/: all-states-history.xlsx  all_states_history_check.sql
deeplearning-ai/00_database-agent/db/: test.db
langchain-academy/module-0/: basics.ipynb
langchain-academy/module-2/: chatbot-summarization.ipynb
